@@ -205,6 +205,9 @@ typedef struct
 	float		disable_screen;		// showing loading plaque between levels
 									// or changing rendering dlls
 									// if time gets > 30 seconds ahead, break it
+	
+	bool		disable_input;		// turns off input
+
 	int32_t 	disable_servercount;	// when we receive a frame and cl.servercount
 									// > cls.disable_servercount, clear disable_screen
 
@@ -212,10 +215,10 @@ typedef struct
 	char		servername[MAX_OSPATH];	// name of server from original connect
 	float		connect_time;		// for connection retransmits
 
-	int32_t 	netchan_port;			// a 16 bit value that allows quake servers
+	int32_t 	netchan_port;		// a 16 bit value that allows quake servers
 									// to work around address translating routers
 	netchan_t	netchan;
-	int32_t 	serverProtocol;		// in case we are doing some kind of version hack
+	int32_t 	server_protocol;	// in case we are doing some kind of version hack
 
 	int32_t 	challenge;			// from the server to use for connecting
 
